--- a/client/main.css
+++ b/client/main.css
@@ -5,9 +5,10 @@ body {
 }
 
 #controls {
-	width: 320px;
+	width: 300px;
 	display: inline-block;
 	vertical-align: top;
+	margin-right: 12px;
 }
 
 .button {
@@ -72,4 +73,21 @@ body {
     top: 0;
 /*     text-align: right; */
 	
+}
+
+#progress-container {
+	display: none;
+	width: 100%;
+	background-color: #aaa;
+	height: 16px;
+	margin-top: 4px;
+	border-width: 2px;
+	border-radius: 4px;
+	border-style: solid;
+	border-color: #ddd;
+}
+
+#progress {
+	background-color: orange;
+	height: 20px;
 }
