--- a/client/main.css
+++ b/client/main.css
@@ -51,43 +51,162 @@ body {
 #file-chooser-label {
 	cursor: pointer;
 	overflow: hidden;
-    position: relative;
-	
+	position: relative;
 	font-weight: bold;
 	background: orange;
 	border-radius: .5em;
-/* 	float: left; */
+	/* 	float: left; */
 	padding: .5em;
 }
 
 #file-chooser-label [type=file] {
 	cursor: pointer;
 	display: block;
-/*     font-size: 999px; */
-    filter: alpha(opacity=0);
-/*     min-height: 100%; */
-    min-width: 100%;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-/*     text-align: right; */
-	
+	/*     font-size: 999px; */
+	filter: alpha(opacity = 0);
+	/*     min-height: 100%; */
+	min-width: 100%;
+	opacity: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	/*     text-align: right; */
 }
 
-#progress-container {
-/* 	display: none; */
+#spinner {
+	display: none;
+	text-align: center;
 	width: 100%;
-	background-color: #aaa;
-	height: 16px;
-	margin-top: 4px;
-	border-width: 2px;
-	border-radius: 4px;
-	border-style: solid;
-	border-color: #ddd;
+	margin-top: 18px;
 }
+
+/* #progress-container { */
+/* 	width: 100%; */
+/* 	background-color: #aaa; */
+/* 	height: 16px; */
+/* 	margin-top: 4px; */
+/* 	border-width: 2px; */
+/* 	border-radius: 4px; */
+/* 	border-style: solid; */
+/* 	border-color: #ddd; */
+/* } */
 
 /* #progress { */
 /* 	background-color: orange; */
 /* 	height: 16px; */
 /* } */
+
+#slider-container {
+	margin-top: 12px;
+}
+
+/*  slider styling follows */
+input[type=range] {
+	-webkit-appearance: none;
+	width: 100%;
+	background: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+}
+
+input[type=range]:focus {
+	outline: none;
+}
+
+input[type=range]::-ms-track {
+	width: 100%;
+	cursor: pointer;
+	background: transparent;
+	border-color: transparent;
+	color: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	border: 1px solid black;
+	height: 18px;
+	width: 8px;
+	border-radius: 3px;
+	background: white;
+	cursor: pointer;
+	margin-top: -6px;
+	box-shadow: 1px 1px 1px black, 0px 0px 1px #0d0d0d;
+}
+
+input[type=range]::-moz-range-thumb {
+	box-shadow: 1px 1px 1px black, 0px 0px 1px #0d0d0d;
+	border: 1px solid black;
+	height: 36px;
+	width: 16px;
+	border-radius: 3px;
+	background: white;
+	cursor: pointer;
+}
+
+input[type=range]::-ms-thumb {
+	box-shadow: 1px 1px 1px black, 0px 0px 1px #0d0d0d;
+	border: 1px solid black;
+	height: 18px;
+	width: 8px;
+	border-radius: 3px;
+	background: white;
+	cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	box-shadow: 1px 1px 1px black, 0px 0px 1px #0d0d0d;
+	background: orange;
+	border-radius: 1.3px;
+	border: 0.2px solid #010101;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+	background: orange;
+}
+
+input[type=range]::-moz-range-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	box-shadow: 1px 1px 1px black, 0px 0px 1px #0d0d0d;
+	background: orange;
+	border-radius: 1.3px;
+	border: 0.2px solid #010101;
+}
+
+input[type=range]::-ms-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	background: transparent;
+	border-color: transparent;
+	border-width: 16px 0;
+	color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+	background: orange;
+	border: 0.2px solid #010101;
+	border-radius: 2.6px;
+	box-shadow: 1px 1px 1px black, 0px 0px 1px #0d0d0d;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+	background: orange;
+}
+
+input[type=range]::-ms-fill-upper {
+	background: orange;
+	border: 0.2px solid #010101;
+	border-radius: 2.6px;
+	box-shadow: 1px 1px 1px black, 0px 0px 1px #0d0d0d;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+	background: orange;
+}
