--- a/client/main.css
+++ b/client/main.css
@@ -5,6 +5,7 @@ body {
 }
 
 #controls {
+	text-align: center;
 	width: 300px;
 	display: inline-block;
 	vertical-align: top;
@@ -17,14 +18,19 @@ body {
 	padding: 4px;
 	margin: 12px;
 	min-width: 100px;
-	max-width: 120px;
+	max-width: 140px;
 	text-align: center;
 	font-weight: bold;
 	cursor: pointer;
 	border-width: 2px;
-	border-color: white;
+	border-color: #ddd;
 	border-style: solid;
 	display: inline-block;
+}
+
+.button:hover {
+	background-color: #0059dd;
+	color: white;
 }
 
 #main {
@@ -48,29 +54,15 @@ body {
 	padding-bottom: 16px;
 }
 
-#file-chooser-label {
-	cursor: pointer;
-	overflow: hidden;
-	position: relative;
-	font-weight: bold;
-	background: orange;
-	border-radius: .5em;
-	/* 	float: left; */
-	padding: .5em;
-}
-
 #file-chooser-label [type=file] {
 	cursor: pointer;
 	display: block;
-	/*     font-size: 999px; */
 	filter: alpha(opacity = 0);
-	/*     min-height: 100%; */
 	min-width: 100%;
 	opacity: 0;
 	position: absolute;
 	right: 0;
 	top: 0;
-	/*     text-align: right; */
 }
 
 #spinner {
